Source/WebCore: Fire TextInput events on speech input, but not set/add any inputMethod attribute. https://bugs.webkit.org/show_bug.cgi?id=60451

Reviewed by Ryosuke Niwa.

Introduce code to dispatch TextInput events when text is introduced via
the speech input feature. Handle also the cases where speech input is
started programmatically from the LayoutTestController.

Test: fast/speech/input-ontextinput-event.html

* dom/TextEventInputType.h:
* html/shadow/TextControlInnerElements.cpp:
(WebCore::InputFieldSpeechButtonElement::setRecognitionResult):

LayoutTests: Testing text events triggered by speech input.
https://bugs.webkit.org/show_bug.cgi?id=60451

Reviewed by Ryosuke Niwa.

* fast/speech/input-ontextinput-event-expected.txt: Added.
* fast/speech/input-ontextinput-event.html: Added.
* fast/speech/input-text-speechstart.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@95722 bbb929c8-8fbe-4397-9dbb-9b2b20218538