third_party/WebKit/Source/WebCore/dom/TextEventInputType.h
@@ -36,6 +36,7 @@ enum TextEventInputType {
     TextEventInputBackTab,
     TextEventInputPaste,
     TextEventInputDrop,
+    TextEventInputOther,
 };
 
 } // namespace WebCore
